[package]
name = "dumbo_rocks_db"
version = "0.1.0"
edition = "2021"
authors = ["zongying_cao <zongying_cao@163.com>"]
description = "RocksDB数据库操作模块，提供类型安全的列族(Column Family)抽象。"
documentation = "https://docs.rs/dumbo_rocks_db"
repository = "https://github.com/cao5zy/dumbo_rocks_db"
license = "MIT"

[dependencies]
rocksdb = "0.23.0"
anyhow = "1.0.98"
serde = {version="1.0.219", features=["derive"]}
serde_json = "1.0.140"

[dev-dependencies]
tempfile = "3.20.0"
